# mono-repo

./: .gitignore  AWS_TRIAL_READINESS_ASSESSMENT.md  AWS_trial_steps.md  PHASE_2_3_COMPLETION_SUMMARY.md  README.md  alembic.ini  conftest.py  final_gap_analysis.md  implementation.md  install-aws-cli.bat  install-aws-cli.sh  package.json  prompts.md  pytest.ini  requirements-security.txt  requirements.txt  run_performance_optimization.py  run_tests.py  setup_aws_credentials.py  software.md
.github/workflows/: build-deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_schema.py
config/: README.md  README_PARAMETER_STORE.md  __init__.py  base.yaml  dev.yaml  parameter_store_design.md  prod.yaml  uat.yaml
dags/: api_triggered_risk_analysis.py  daily_risk_processing.py
dash/: risk_dashboard.py
deploy/: README.md  deploy.py
deploy/configs/: dev.yaml  prod.yaml  uat.yaml
deploy/kubernetes/: ecr-secret.yaml  ingress.yaml  redis-cluster.yaml  risk-api-optimized.yaml
devops/: DASH_DIAGRAM_CONSISTENCY_FIX.md  FREE_TRIAL_IMPLEMENTATION.md  RISK_API_DIAGRAM_CONSISTENCY_FIX.md  TERRAFORM_SECURITY_ANALYSIS_CORPORATE_INTRANET.md  WEB_APP_CLOUDFRONT_VITE_CORRECTIONS.md  WEB_APP_CORPORATE_INTRANET_ARCHITECTURE.md  WEB_APP_DIAGRAM_CONSISTENCY_FIX.md  WEB_APP_NGINX_POSITIONING_FIX.md  activate-and-generate-diagrams.bat  activate-and-generate-diagrams.sh  cost_monitor.py  create_airflow_diagrams.py  create_architecture_diagrams.py  create_architecture_diagrams_fixed.py  create_architecture_diagrams_new.py  create_architecture_diagrams_old.py  create_cicd_flow_diagram.py  create_cloudwatch_logging_diagrams.py  create_corporate_intranet_diagrams.py  create_cost_management_diagrams.py  create_dash_diagrams.py  create_database_connections_diagrams.py  create_diagram_overview.py  create_emergency_access_diagrams.py  create_iam_security_diagrams.py  create_monitoring_stack_diagrams.py  create_multi_environment_security_diagrams.py  create_network_architecture_diagrams.py  create_performance_optimization_diagrams.py  create_risk_api_diagrams.py  create_s3_bucket_policies_diagrams.py  create_secrets_management_diagrams.py  create_security_framework_diagrams.py  create_security_groups_diagrams.py  create_terraform_workflow_diagram.py  create_updated_architecture_diagrams.py  create_web_apps_diagrams.py  emergency-stop.bat  emergency-stop.sh  generate-diagrams.bat  (+13 more)
devops/jupyterhub/: README.md  cleanup_sessions.py  generate_jupyterhub_diagrams.py  monitor_jupyterhub.py
docs/: AIRFLOW_API_IMPLEMENTATION_SUMMARY.md  API_CLIENTS_ORGANIZATION.md  AWS_CREDENTIALS_SETUP.md  BAMBOO_BITBUCKET_CICD_CONFIGURATION.md  BAMBOO_DEPLOYMENT_REMOVAL.md  BRANCH_DEPLOYMENT_CICD_SETUP.md  CLOUDWATCH_MONITORING_STACK_DOCUMENTATION.md  CORPORATE_INTRANET_ARCHITECTURE.md  DEVELOPER_ROLES_SUMMARY.md  DIAGRAM_FIXES_SUMMARY.md  DIAGRAM_INDEX.md  DIAGRAM_SCRIPTS_MIGRATION.md  DIAGRAM_UPDATES_SUMMARY.md  DIAGRAM_UPDATE_COMPLETION_REPORT.md  ENV_FILE_MIGRATION_SUMMARY.md  GENERATE_DIAGRAMS_ORGANIZATION.md  IAM_SECURITY_DIAGRAMS_DOCUMENTATION.md  INFRASTRUCTURE-TEARDOWN.md  INGRESS_CONTROLLER_ARCHITECTURE.md  INTERNAL_ALB_CICD_CLARIFICATION.md  INTERNAL_ALB_DEPLOYMENT_CLARIFICATION.md  JUPYTERHUB_DOCUMENTATION.md  PARAMETER_STORE_SECRETS_MANAGEMENT_DOCUMENTATION.md  PARAMETER_STORE_TERRAFORM_IMPLEMENTATION.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  REQUIREMENTS_ANALYSIS.md  REQUIREMENTS_CONSOLIDATION.md  REQUIREMENTS_MANAGEMENT.md  SECURITY_ANALYSIS_REPORT.md  SECURITY_GROUPS_NETWORK_ACLS_DOCUMENTATION.md  SECURITY_REQUIREMENTS_INTEGRATION_GUIDE.md  TERRAFORM-DIAGRAMS-QUICKSTART.md  TEST_SCRIPT_MIGRATION.md  VPC_NETWORK_ARCHITECTURE_DOCUMENTATION.md  airflow_setup.md  aws-cli-setup.md  cloudwatch_logging_architecture_implementation.md  component-deployment-clarification.md  corporate_intranet_connectivity_implementation.md  cost_management_resource_tagging_implementation.md  (+11 more)
docs/architecture/: PATH_UPDATE_SUMMARY.md  README.md  SERVICE_DIAGRAMS_README.md  SVG_GENERATION_FIX.md  TERRAFORM_WORKFLOW_DOCUMENTATION.md  architecture_dev.md  architecture_prod.md  architecture_uat.md
infrastructure/: DEPLOYMENT_GUIDE.md  PROD_DEPLOYMENT_GUIDE.md  PROD_TEARDOWN_GUIDE.md  UAT_DEPLOYMENT_GUIDE.md  UAT_TEARDOWN_GUIDE.md  teardown_all.py  teardown_all.sh
infrastructure/bootstrap/: README.md  deploy_bootstrap.py  deploy_prod_bootstrap.py  deploy_uat_bootstrap.py  main.tf  manage_infrastructure.py  teardown_prod_bootstrap.py  teardown_uat_bootstrap.py  update_main_backend.py  variables.tf
infrastructure/iam/: README.md  main.tf  outputs.tf  variables.tf
infrastructure/terraform/: DIAGRAM_ENV_SETUP.md  airflow_api_gateway.tf  dev_server.tf  eks.tf  free_trial.tfvars.example  jupyterhub.tf  jupyterhub_storage.tf  main.tf  rds.tf  user_data.sh  variables.tf  vpc.tf
infrastructure/terraform_backup/: dev_server.tf  intranet_load_balancer.tf  main.tf  variables.tf
libs/auth/: __init__.py  auth.py  jwt_handler.py  password_utils.py  pyproject.toml
libs/auth/tests/: test_auth.py
libs/business/: __init__.py  analytics.py  risk_management.py
libs/cloud/: __init__.py  aws_secrets.py  parameter_store.py
libs/config/: __init__.py
libs/data/: market_data_client.py  snowflake_client.py
libs/db/: __init__.py  snowflake_utils.py
libs/monitoring/: __init__.py  health_endpoints.py  logging.py  monitoring.py  prometheus.py  prometheus_metrics.py  pyproject.toml
libs/monitoring/tests/: test_monitoring.py
libs/performance/: __init__.py  monitoring.py  optimization.py
libs/risk/: calculations.py
libs/security/: __init__.py  authentication.py  config.py  middleware.py  security_framework.py
libs/storage/: __init__.py  models.py  pyproject.toml  redis_client.py  storage.py
libs/storage/tests/: test_storage.py
notebooks/: README.md
scripts/: market_data_processor.py  migrate_to_parameter_store.py  report_generator.py  setup_environment_config.py  validate_parameter_store.py
services/: jupyterhub_service.py  risk_api.py  risk_api_enhanced.py  risk_api_optimized.py  risk_api_secured.py
tests/: test_framework.py
(+68 files in other folders)
